# Snake

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  README.md  conanfile.py
assets/: gameplay.webm
cmake/: EnforceOutOfSourceBuilds.cmake  StandardProjectSettings.cmake
includes/constants/: Constants.hpp
includes/fruit/: Fruit.cpp  Fruit.hpp
includes/game/: Game.cpp  Game.hpp
includes/snake/: Snake.cpp  Snake.hpp
source/: CMakeLists.txt  Fruit.cpp  Fruit.hpp  Game.cpp  Game.hpp  Snake.cpp  Snake.hpp  main.cpp
